examples/vite-app/.rsw/rsw.err
[INFO]: 🎯  Checking for the Wasm target...
[INFO]: 🌀  Compiling to Wasm...
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/cgm/projects/personal/bevy-wasm-api/examples/vite-app/bevy-app/Cargo.toml
workspace: /home/cgm/projects/personal/bevy-wasm-api/Cargo.toml
   Compiling bevy-app v0.1.0 (/home/cgm/projects/personal/bevy-wasm-api/examples/vite-app/bevy-app)
warning: unused import: `tsify::Tsify`
 --> examples/vite-app/bevy-app/src/lib.rs:5:5
  |
5 | use tsify::Tsify;
  |     ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `f32: JsCast` is not satisfied
  --> examples/vite-app/bevy-app/src/lib.rs:44:1
   |
44 | #[bevy_wasm_api]
   | ^^^^^^^^^^^^^^^^ the trait `JsCast` is not implemented for `f32`
   |
   = help: the following other types implement trait `JsCast`:
             JsValue
             bevy_wasm_api::reexports::js_sys::Array
             ArrayBuffer
             SharedArrayBuffer
             BigInt
             Boolean
             DataView
             web_sys::features::gen_AddEventListenerOptions::AddEventListenerOptions
           and 142 others
   = note: required for `JsValue` to implement `From<&f32>`
   = note: this error originates in the attribute macro `bevy_wasm_api` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
warning: `bevy-app` (lib) generated 1 warning
error: could not compile `bevy-app` (lib) due to 1 previous error; 1 warning emitted
Error: Compiling your crate to WebAssembly failed
Caused by: Compiling your crate to WebAssembly failed
Caused by: failed to execute `cargo build`: exited with exit status: 101
  full command: cd "bevy-app" && "cargo" "build" "--lib" "--target" "wasm32-unknown-unknown"
